# jim-emacs-fun-py

./: .cmd_py_prompt.py.swp  .gitignore  Digraph.gv  README.md  aaatest.py  abc.py  algo.py  assistants_role_demo.py  async_count_list.py  async_shell.py  async_shell2.py  async_shell3.py  async_test.py  asyncio_async_2chan_log.py  asyncio_async_2chan_log2_ok_global_chan.py  base_lambdatest.py  bbbtest.py  class_diagram  class_gragph.py  client_debug.py  client_terminal.html  cmd_py.py  cmd_py_prompt.py  deepbricks_cladue.py  deepbricks_models.py  deps.edn  diff_funcs.py  diff_funcs_file.py  emacs_jupyter_test.ipynb  event_loop.py  function_calling_2.py  function_calling_3.py  function_calling_agent_important.py  function_calling_langfuse.py  function_diagram  get_filetree_paths.py  graphviz_async_refs.py  graphviz_import_refs.py  graphviz_py_class.py  graphviz_py_fun.py  (+59 more)
RLHF/: Tetris_RL.py  Tetris_RL_train_data.md  flappy_bird.py
asyncio_least_action_principle/: async_curl.py  async_test2.py  asyncio_Runner.py  asyncio_gather_concurrent_execution.py  asyncio_get_event_loop.py  asyncio_task.py  asyncio_timeout.py  asyncio_timeout2.py  await_list_input_from_pre_output.py  await_obj.py  await_test.py  cancel_task.py  create_task_shield.py  loop_create_future_do.py  say_after_task.py  task_list.py  tasks.py  to_thread.py  util_ls.py  wait_for.py  while_true_loop.py
autogen/: autogen_chat_codellama_py.py  autogen_litellm_server.py  autogen_litellm_server_langfuse.py  autogen_shell_gpt4.py
fft/: fft_apple.py  fft_draw_pics.py
new_poc_files/: class_name.py  create_llm_test_directory.py  file_cleanup.py  file_removal.py  function_with_none_args.py  import_search_in_xonsh.py  install_packages.py  main.py  mcts_demo.py  print_numbers.py  pytest_mark_parametrize.py  (+12 more)
(+18 files in other folders)
