[tool.poetry]
name = "jim-emacs-fun-py"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
flask-socketio = "^5.3.6"
flask = "^3.0.3"
ipython = "^8.26.0"
jupyter-client = "^8.6.2"
litellm = "^1.42.5"

[tool.poetry.group.dev.dependencies]
langfuse = "^2.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
